--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "gulp sass"
+    "sass": "gulp watch"
   },
   "eslintConfig": {
     "extends": [
