--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,13 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:5002",
+  "proxy": "http://localhost:5002",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "react": "^17.0.2",
