--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
