--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "axios": "^0.26.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
