--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5002",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -12,6 +11,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "babel-core": "^6.26.3",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-hooks-use-modal": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
