--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "assets": "^3.0.1",
     "axios": "^0.26.1",
     "babel-core": "^6.26.3",
+    "cloudinary-react": "^1.7.2",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-hooks-use-modal": "^2.1.0",
     "react-icons": "^4.3.1",
+    "react-loading-icons": "^1.0.8",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
