--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.3.1",
     "react-loading-icons": "^1.0.8",
     "react-modal": "^3.14.4",
+    "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.2",
