--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "editor.cursorBlinking": "expand",
-    "editor.cursorSmoothCaretAnimation": true
+	"editor.cursorBlinking": "phase",
+	"editor.cursorSmoothCaretAnimation": false
 }
